# Platformer_SDL

./: .gitmodules  CMakeLists.txt  imgui.ini  project.tiled-session
Assets/: main.tmj  scene.json
Assets/Background/: texture_map.json
Assets/Characters/: texture_map.json
Assets/Characters/knight/: textures.json
Assets/Levels/: main.tmj
Assets/Tiles/: ground_bb.tx  ground_rotated.tx  oak_woods_tileset.tsx  player.tsj  player.tsx  shop.tsx  wall_bb.tx
externalLibs/: CMakeLists.txt
src/: animation.cc  animation.h  app.cc  app.h  background.h  camera.h  entity.cc  entity.h  main.cc  physics.cc  physics.h  player.cc  player.h  sdl_input_manager.cc  sdl_input_manager.h  sdl_render.cc  sdl_render.h  texture.h  texture_map.cc  texture_map.h
src/level/: level.cc  level.h
src/ui/: imgui_render.cc  imgui_render.h
src/utils/: helpers.h  singleton.h  state_machine.h  time_manager.cc  time_manager.h
